# smartsalesAI_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SmartSales_AI_Architecture_Revision.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 119e059a686b_merge_knowledge_and_leads_branches.py  43aded7c2a7d_knowledgedocument_and_knowledgechunks.py  597e7104e026_add_business_business_settings_and_.py  5fd780d13bc2_remove_knowledge_base_text_column_from_.py  962aa9e1ad66_use_timezone_aware_utc_datetime_all_.py  b3f2c9a7d4e1_add_leads_messages_and_sales.py  b7f65c2a9d80_add_whatsapp_connections.py
app/: celery_worker.py  config.py  database.py  main.py
app/ai/: agent.py
app/celery/: __init__.py
app/core/: context_manager.py  dependencies.py  socket_manager.py
app/models/: __init__.py  business.py  knowledge_base.py  lead.py  message.py  refresh_token.py  sale.py  settings.py  whatsapp_connection.py
app/routers/: __init__.py  auth.py  knowledge.py  leads.py  messages.py  sales.py  settings.py  webhook.py  whatsapp.py
app/schemas/: __init__.py  auth.py  business.py  knowledge_base.py  lead.py  message.py  sale.py  settings.py  whatsapp.py
app/services/: ai_service.py  auth_service.py  embeddings_service.py  intent_service.py  lead_service.py  rag_service.py  s3_service.py  sale_service.py  settings_service.py  webhook_service.py  whatsapp_service.py
app/tasks/: ai_tasks.py  knowledge_tasks.py
app/utils/: encryption.py  jwt.py
docs/: MIGRATIONS.md  backend_implementation.md
(+15 files in other folders)
