[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartsales-backend"
version = "0.1.0"
description = "SmartSales AI backend"
readme = "README.md"
requires-python = ">=3.10,<3.14"

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
